# rsql

./: Cargo.toml  README.md
proxy/: index.mjs  package-lock.json  package.json  test.mjs
rsql/: Cargo.toml
rsql/src/: lib.rs  main.rs
rsqld/: Cargo.toml
rsqld/src/: file.rs  file_mgr.rs  lib.rs  log.rs  main.rs  server.rs
src/: cli_utils.rs  main.rs
