[package]
name = "rsql"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = { version = "0.11.0", features = ["history"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.41.0", features = ["full"] }
prettytable-rs = "^0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
