[package]
name = "rsqld"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["runtime", "with-chrono-0_4"] }
dotenvy = "0.15.7"
prettytable-rs = "^0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.8"
chrono = "0.4.38"
